# qgis-plugin-manager

./: .ai_context_cache.json  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  CHANGELOG.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  RULES.md  agentic_framework_guide.md  bootstrap.py  metadata.txt  project_context.json  pyproject.toml  ruff.toml
.agent/: AGENTS.md
.agent/history/next_steps/: next_steps_2026-02-18.md  next_steps_2026-04-05.md
.agent/memory/: AGENT_LESSONS.md
.agent/skills/agentic-memory/: SKILL.md
.agent/skills/changelog-generator/: SKILL.md
.agent/skills/coding-standards/: SKILL.md
.agent/skills/commit-standards/: SKILL.md
.agent/skills/documentation-standards/: SKILL.md
.agent/skills/domain-logic/: SKILL.md
.agent/skills/geological-logic/: SKILL.md
.agent/skills/project-context/: SKILL.md
.agent/skills/qa-docker/: SKILL.md
.agent/skills/qa-standards/: SKILL.md
.agent/skills/qgis-core/: SKILL.md
.agent/skills/release-management/: SKILL.md
.agent/skills/ui-framework/: SKILL.md
.agent/workflows/: build-feature.md  cierra-fase.md  cierra-sesion.md  close-session.md  crea-commit.md  create-commit.md  fix-linting.md  ia-critic.md  inicia-fase.md  inicia-sesion.md  refactor-code.md  release-plugin-en.md  release-plugin.md  run-tests-in-qgis.md  run-tests.md  start-session.md  task_interpretation_25d.md  verificar-estandares.md  verify-standards.md
.github/: release_template.md
.github/workflows/: main.yml
docs/: CHANGELOG.md  COMMIT_GUIDELINES.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  GITHUB_RELEASE_v0.4.0.md  GITHUB_RELEASE_v0.6.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  TUTORIAL.md  qgis_manager_dev_roadmap.md  uv_modernization_guide.md
docs/architecture/: CORE_VALIDATION_IMPROVEMENTS.md  IGNORE_PARSER_IMPROVEMENTS.md
docs/maintenance/: SESSION_LOG_modernization.md  infrastructure_upgrade_20260218.md  sesion_2026-02-18_v0.6.1_release.md  sesion_2026-02-18_v0.6.1_release_task.md  session_2026-04-05_gen5_sync.md  v0.6.1_bug_patch_report.md
docs/plans/: badges_expansion_plan.md  bump_implementation_plan.md  cli_refactor_plan.md  deployment_optimization_plan.md  distribution_plan.md  documentation_reorg_plan.md  hooks_expansion_plan.md  implementation_plan.md  improved_hooks_plan.md  rcc_modernization_plan.md  structural_validation_plan.md  workflow_adaptation_plan.md
docs/releases/: GITHUB_RELEASE_v0.3.1.md  GITHUB_RELEASE_v0.3.2.md  GITHUB_RELEASE_v0.3.3.md  GITHUB_RELEASE_v0.4.1.md  GITHUB_RELEASE_v0.5.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.6.1.md  RELEASE_NOTES_v0.6.2.md  RELEASE_NOTES_v0.6.4.md  v0.6.2.md  v0.6.3.md
docs/research/: CLI_EXPANSION_PROPOSAL.md  COMPETITIVE_ANALYSIS.md  RECOMMENDATIONS.md  distribution_research.md
docs/standards/: CONTRIBUTING.md
docs/walkthroughs/: walkthrough.md
scaffold/: AGENTS.md
scaffold/.agent/: AGENTS.md
scaffold/.agent/architecture/: OPTIMIZATION_PLAN.md
scaffold/memory/: AGENT_LESSONS.md  agent_metrics.json
scaffold/mining/skills/geological-logic/: SKILL.md
scaffold/processing/: algorithm_template.py
scaffold/qgis/skills/qa-docker/: SKILL.md
scaffold/qgis/skills/qgis-core/: SKILL.md
scaffold/qgis/skills/qgis-migration-4x/: SKILL.md
scaffold/qgis/skills/ui-framework/: SKILL.md
scaffold/qgis/workflows/: audit-plugin.md  release-plugin.md  run-tests-in-qgis.md
scaffold/skills/: agentic-memory.md  coding-standards.md  commit-standards.md
scaffold/skills/data-science/: SKILL.md
scaffold/skills/data-science/examples/: eda_template.py
scaffold/skills/data-science/scripts/: generate_mock_data.py  validate_dataset.py
scaffold/ui/: dialog_template.py
scaffold/workflows/: cierra-sesion.md  ia-critic.md  inicia-sesion.md
scripts/: mcp_server.py  security_scan.py  skill_sync.py
src/qgis_manager/: __init__.py  cli.py  config.py  constants.py  core.py  dependencies.py  discovery.py  hooks.py  ignore.py  validation.py
src/qgis_manager/cli/: __init__.py  app.py  base.py
src/qgis_manager/cli/commands/: analyze.py  bump.py  clean.py  compile.py  deploy.py  hooks.py  init.py  install_deps.py  package.py  (+1 more)
tests/: test_cli.py  test_config.py  test_core.py  test_deployment_optimization.py  test_discovery.py  test_fix_exclusions.py  test_hooks.py  test_hooks_native.py  test_ignore.py  test_ignore_system.py  test_rcc_modernization.py  test_v061_patch.py  test_validation.py  test_validation_deep.py
(+4 files in other folders)
