[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgis-plugin-manager"
version = "0.5.0"
description = "A modern CLI for managing QGIS plugin development, deployment, and packaging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [
    { name = "Juan M Bernales", email = "juanbernales@gmail.com" }
]
dependencies = [
    "click>=8.0",
    "pathlib",
]

[project.scripts]
qgis-manage = "qgis_manager.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_manager"]

[tool.uv]
managed = true
package = true

[tool.uv.sources]
qgis-plugin-analyzer = { git = "https://github.com/geociencio/qgis-plugin-analyzer.git" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "qgis-plugin-analyzer",
    "ruff>=0.14.10",
    "types-setuptools>=80.9.0.20251223",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["qgis_manager"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]



[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
