[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgis-manage"
version = "0.6.0"
description = "A modern CLI for managing QGIS plugin development, deployment, and packaging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [
    { name = "Juan M Bernales", email = "juanbernales@gmail.com" }
]
keywords = ["qgis", "plugin", "manager", "cli", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Natural Language :: Spanish",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/geociencio/qgis-plugin-manager"
Repository = "https://github.com/geociencio/qgis-plugin-manager"
Issues = "https://github.com/geociencio/qgis-plugin-manager/issues"
Changelog = "https://github.com/geociencio/qgis-plugin-manager/blob/main/CHANGELOG.md"
Documentation = "https://github.com/geociencio/qgis-plugin-manager#readme"

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "types-setuptools>=80.9.0.20251223",
    "ai-context-core>=3.2.1",
    "qgis-plugin-analyzer>=1.10.0",
]

[project.scripts]
qgis-manage = "qgis_manager.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_manager"]

[tool.uv]
managed = true
package = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["qgis_manager"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]



[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
